# pmb2_robot

pmb2_bringup/: CHANGELOG.rst  package.xml
pmb2_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
pmb2_description/config/: pmb2_configuration.yaml
pmb2_description/gazebo/: gazebo.urdf.xacro
pmb2_description/launch/: robot_state_publisher.launch.py  show.launch.py
pmb2_description/module/: 00_robot_state_publisher.yaml
pmb2_description/pmb2_description/: launch_arguments.py
pmb2_description/robots/: pmb2.urdf.xacro
pmb2_description/ros2_control/: ros2_control.urdf.xacro
pmb2_description/test/: test_description.launch.py
pmb2_description/urdf/base/: base.gazebo.xacro  base.urdf.xacro  base_sensors.urdf.xacro
pmb2_description/urdf/cameras_add_on/: cameras_add_on.urdf.xacro
pmb2_description/urdf/dock/: dock.urdf.xacro
pmb2_description/urdf/sensors/: bumper.urdf.xacro  courier.urdf.xacro  elp_rgb.gazebo.xacro  elp_rgb.urdf.xacro  hokuyo_urg_04lx_ug01_laser.gazebo.xacro  hokuyo_urg_04lx_ug01_laser.urdf.xacro  imu.gazebo.xacro  imu.urdf.xacro  microphone.urdf.xacro  range.gazebo.xacro  range.urdf.xacro  sick_tim551_laser.gazebo.xacro  sick_tim551_laser.urdf.xacro  sick_tim561_laser.gazebo.xacro  sick_tim561_laser.urdf.xacro  sick_tim571_laser.gazebo.xacro  sick_tim571_laser.urdf.xacro  sick_tim571_laser_gpu.gazebo.xacro  sick_tim571_laser_gpu.urdf.xacro  structure_sensor.gazebo.xacro  structure_sensor.urdf.xacro
pmb2_description/urdf/wheels/: caster.gazebo.xacro  caster.urdf.xacro  wheel.gazebo.xacro  wheel.urdf.xacro
pmb2_robot/: package.xml  (+1 more)
(+11 files in other folders)
